fixed header on mobile

--- a/css/template-2.css
+++ b/css/template-2.css
@@ -28,7 +28,7 @@ h2 {margin: .5rem auto; color: #363534;}
 .footer_logo.third, .footer_links.third {width: 100% !important;}
 .side_nav {margin: -1rem -1rem 1.5rem -1rem;}
 .side_nav_list a, .side_nav_header {margin-bottom: 0; padding: 0.5rem 0.7rem; font-size: 95%;}
-.banner {padding: 0 1rem;}
+.banner {padding: 0 1rem; width: 100% !important;}
  
  /* (Handheld) */
 
